Added some buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@ body {
 }
 
 #canvas {
-  background: #fff;
+  /* background: #fff; */
+  border: 1px solid #000;
 }
 
 #container {
@@ -14,17 +15,14 @@ body {
 
 .btn {
   margin: 4px;
+  text-decoration: none;
+  color: black;
 }
 
 .colorbtn {
   width: 38px;
   height: 38px;
   margin: 4px;
-}
-
-#dnld {
-  text-decoration: none;
-  color: black;
 }
 
 #yellow {
